2008-05-20  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FREOPEN): fix stack access
	include <fcntl.h> before DEFMODULE so that DEFCHECKERs work

2008-05-20  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1966714 ]: invalid syntax in top-level configure
	* configure (passnext): support non-POSIX /bin/sh on Solaris

2008-05-19  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: move DEFMODULE et al outside of the
	file locking conditional

2008-05-19  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (%FGETC, %FPUTC, %UNGETC): add for testing

2008-05-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (mark_fp_valid): export to clisp.h
	* modules/syscalls/calls.c (%STDIO, my_stdin, my_stdout)
	(my_stderr, init_stdio) [HAVE_FFI]: add
	(module__syscalls__init_function_2) [HAVE_FFI]: call init_stdio()
	* modules/syscalls/posix.lisp (stdin, stdout, stderr) [FFI]: defconstant

2008-05-19  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FREOPEN): implement
	* modules/syscalls/posix.lisp (freopen): export

2008-05-18  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1966375 ]: no tgamma on solaris
	* modules/syscalls/posix.lisp (tgamma): if tgamma is not defined,
	define it using lgamma
	* modules/syscalls/calls.c (tgamma) check HAVE_TGAMMA

2008-05-16  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (upload-sunsite): remove target
	* clisp.lsm: remove file

2008-05-16  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (upload-sf): use rsync instead of ftp because of
	the change in the SF FRS (File Release System)

2008-05-15  Sam Steingold  <sds@gnu.org>

	* configure: do not pass --with-module to subdir configures
	(starting with autoconf 2.62 this results in warnings)

2008-05-15  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.46 (2008-07-07) [+ gnulib-imported build-aux-update]

2008-05-15  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (fixperms): also fix web pages permissions
	* utils/fix-perms.sh: accept command line argument ROOT
